# fakewsserver

./: .gitignore  README.md  check_all.sh  how_to_release.info  pyproject.toml
fakewsserver/: __init__.py  _server.py  server.py
tests/: test_fakewsserver.py  test_prepare_test_files.py
