[tool.poetry]
name = "fakewsserver"
version = "0.1.0"
description = ""
authors = ["uigctaw <uigctaw@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-asyncio = "^0.15.1"
bandit = "^1.7.0"
mypy = "^0.812"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
